Add naive create_wallet, add simple test, add exception handling, add swagger message field
