# docs/swagger.yaml
@@ -135,7 +135,7 @@ components:
       required:
         - operation_id
         - code
-        - wallet_id
+        - message
       properties:
         operation_id:
           description: "Идентификатор операции"
@@ -150,6 +150,9 @@ components:
           enum: [0, 101, 201]
         wallet_id:
           description: "Идентификатор кошелька"
+          type: string
+        message:
+          description: "Сообщение ответа"
           type: string
 
     WalletCreditRequest:
@@ -172,6 +175,7 @@ components:
       required:
         - operation_id
         - code
+        - message
       properties:
         operation_id:
           description: "Идентификатор операции"
@@ -184,6 +188,9 @@ components:
               *  201 - Кошелёк не найден
           type: integer
           enum: [0, 101, 201]
+        message:
+          description: "Сообщение ответа"
+          type: string
 
     WalletDebitRequest:
       required:
@@ -205,6 +212,7 @@ components:
       required:
         - operation_id
         - code
+        - message
       properties:
         operation_id:
           description: "Идентификатор операции"
@@ -218,6 +226,9 @@ components:
               *  202 - Недостаточно средств
           type: integer
           enum: [0, 101, 201, 202]
+        message:
+          description: "Сообщение ответа"
+          type: string
 
     WalletP2PTransferRequest:
       required:
@@ -243,6 +254,7 @@ components:
       required:
         - operation_id
         - code
+        - message
       properties:
         operation_id:
           description: "Идентификатор операции"
@@ -256,6 +268,9 @@ components:
               *  202 - Недостаточно средств
           type: integer
           enum: [0, 101, 201, 202]
+        message:
+          description: "Сообщение ответа"
+          type: string
 
     Error:
       type: object
@@ -268,7 +283,7 @@ components:
               description: "Код ошибки"
               type: integer
             message:
-              description: "Описание ошибок формата запроса"
+              description: "Описание ошибки"
               type: string
 
   responses:
